--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:ital,wght@0,300;0,400;0,500;0,600;0,700;1,600&display=swap');
 
 .Content {
     display: flex;
@@ -30,10 +30,25 @@
 }
 
 .date {
-    margin: 0 5% 0 0;
+    margin: 0 5% 0 8px;
     font-size: 0.8em;
     font-weight: bold;
     color: #fb6087;
+}
+
+.copyright {
+    align-self: flex-start;
+    margin: 0 0 0 5%;
+    font-size: 0.8em;
+    font-weight: 600;
+    color: #fb6087;
+
+}
+
+.span-copyright {
+    font-style: italic;
+    font-weight: bold;
+    color: #8586a6;
 }
 
 .explanation {
