--- a/src/styles.css
+++ b/src/styles.css
@@ -1,16 +1,44 @@
-.App {
+/* .App {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     width: 100%;
     height: 100vh;
     justify-content: center;
 }
 
-.aeroship {
-    height: 50%;
-}
+
 
 .hills {
     grid-column: span 4;
-    grid-row: span 2;
+    grid-row: 3 /4;
+} */
+@import url('https://fonts.googleapis.com/css2?family=Codystar:wght@300;400&display=swap');
+
+.App {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+}
+
+.content {
+    grid-column: 2 /4;
+    grid-row: 1 /3;
+}
+
+.title {
+    font-family: Codystar;
+    font-size: 2.5em;
+    position: absolute;
+    color: azure;
+    margin: 3.5%;
+    letter-spacing: .2rem;
+}
+
+.spaceship {}
+
+canvas {
+    touch-action: none;
 }
