--- a/src/styles.css
+++ b/src/styles.css
@@ -31,11 +31,19 @@
 .title {
     font-family: Codystar;
     font-size: 2.5em;
-    position: absolute;
+    position: relative;
+    top: 1.5em;
+    left: 1.5em;
     color: azure;
-    margin: 3.5%;
     letter-spacing: .2rem;
+    cursor: pointer;
 }
+
+.title-clicked {
+    text-shadow: 0 0 0.125em white, 0 0 0.45em white;
+}
+
+
 
 .spaceship {}
 
