--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -62,3 +62,21 @@
     color: #8586a6;
     font-weight: 500;
 }
+
+@media (max-width: 560px) {
+    .Content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        /* width: 100%; */
+        margin: 0;
+        color: #46485a;
+        font-family: 'Red Hat Text';
+    }
+
+    .img {
+        width: 90%;
+        /* height: 30em; */
+        border-radius: 4px;
+    }
+}
