--- a/src/styles.css
+++ b/src/styles.css
@@ -37,6 +37,7 @@
     color: azure;
     letter-spacing: .2rem;
     cursor: pointer;
+    transition: 0.2s;
 }
 
 .title-clicked {
@@ -44,9 +45,92 @@
 }
 
 
-
-.spaceship {}
-
 canvas {
     touch-action: none;
+}
+
+@media (max-width: 1300px) {
+    .App {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content {}
+
+    .title {
+        font-family: Codystar;
+        font-size: 1.5em;
+        position: static;
+        text-align: center;
+        top: 1.5em;
+        left: 1.5em;
+        color: azure;
+        letter-spacing: .2rem;
+        cursor: pointer;
+        transition: 0.2s;
+        margin: 4em 0 30px 0;
+    }
+
+    .spaceship {
+        display: none;
+    }
+
+    body {
+
+        overflow: auto;
+    }
+
+}
+
+@media (max-width: 560px) {
+    .App {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: 100vh;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .content {}
+
+    .title {
+        font-family: Codystar;
+        font-size: 1.5em;
+        position: static;
+        text-align: center;
+        top: 1.5em;
+        left: 1.5em;
+        color: azure;
+        letter-spacing: .2rem;
+        cursor: pointer;
+        transition: 0.2s;
+        margin: 2em 0 30px 0;
+    }
+
+    .spaceship {
+        display: none;
+    }
+
+    body {
+
+        overflow: auto;
+    }
+
+}
+
+@media (max-width: 375px) {
+    .title {
+        margin: 10em 0 30px 0;
+    }
+}
+
+@media (max-width: 280px) {
+    .title {
+        margin: 12em 0 30px 0;
+    }
 }
